cabal-version:      3.0
name:               clay-cbits
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Cajunvoodoo
maintainer:         27892784+Cajunvoodoo@users.noreply.github.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files
tested-with:     GHC == 8.0.2
               , GHC == 8.2.2
               , GHC == 8.4.4
               , GHC == 8.6.5
               , GHC == 8.8.4
               , GHC == 8.10.7
               , GHC == 9.0.2
               , GHC == 9.2.8
               , GHC == 9.4.8
               , GHC == 9.6.6
               , GHC == 9.8.3
               , GHC == 9.10.1
               , GHC == 9.12.1

common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-language: Haskell2010
    include-dirs: ./cbits
    install-includes: clay.h
