cabal-version:      3.0
name:               clay-raylib-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Cajunvoodoo
maintainer:         27892784+Cajunvoodoo@users.noreply.github.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common extensions
  default-extensions:
    AllowAmbiguousTypes
    Arrows
    BlockArguments
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LambdaCase
    NoMonomorphismRestriction
    NoStarIsType
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RecordWildCards
    RoleAnnotations
    TemplateHaskell
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns
    CApiFFI

library
    import:           warnings, extensions
    exposed-modules:
      Clay.Raylib
      Clay.Raylib.Raw.Types
    -- other-modules:
    -- other-extensions:
    build-depends:
      , base
      , clay-hs
      , inline-c
      , derive-storable
      , derive-storable-plugin
      , containers
      , h-raylib
      , bytestring
    hs-source-dirs:   src
    default-language: GHC2021

executable clay-raylib-hs
    import:           warnings, extensions
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
      , base
      , clay-raylib-hs
      , bytestring
      , h-raylib
      , clay-hs
      , clay-cbits
      , linear

    hs-source-dirs:   app
    default-language: GHC2021
